fix the code's wrap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -270,7 +270,7 @@ article .codehilite
   padding-right: 100px;
   margin-bottom: 20px;
   word-wrap: break-word; 
-  word-break: break-all;
+  word-break: normal;
   font-family: Monaco, Consolas, Lucida Console, monospace;
 }
 
@@ -290,6 +290,8 @@ article .codehilite pre
   padding-right: 5px;
   display: block;
   background-color: #f9f9f9;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 article img {
